<?xml version="1.0"?>
<package format="3">
  <name>fcl_ros</name>
  <version>0.1.0</version>
  <description>The FCL Catkin Package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <!--  This section includes depends for ROS1-->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!--  This section includes depends for ROS2-->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!--  This section includes depends that are for both ROS1 and ROS2-->
  <depend>libccd_ros</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
