<?xml version="1.0"?>
<package format="3">
  <name>tesseract_ext</name>
  <version>0.1.0</version>
  <description>The Tesseract External Packages (Pure CMake)</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <!--  This section includes depends for ROS1-->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!--  This section includes depends for ROS2-->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>bullet3_ros</exec_depend>
  <exec_depend>fcl_ros</exec_depend>
  <exec_depend>libccd_ros</exec_depend>
  
  <export>
    <metapackage condition="$ROS_VERSION == 1" />
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
